# astp_lee

./: .env  .gitignore  ENV_SETUP.md  GPU_RUN.md  LKH  README.md  RUN_COMMANDS.md  pyproject.toml  result_rel_pp_ss_st_tt_sum.json  run.bat
.claude/: settings.local.json
data/ATSP_20x2/: summary.csv
data/ATSP_20x3/: summary.csv
data/ATSP_20x5/: summary.csv
src/arch_search/: __init__.py  llm_client.py  runner.py  search_space.py  spec.py
src/data/: convert_atsp_to_tsp.py  graph_transforms.py  preprocessor.py  template_manager.py
src/engine/: args.py  run.py  search_all_combo.py  train_dgl.py
src/models/: models_dgl.py  models_pyg.py
src/tools/: eval_architecture.py
src/visualization/: plot_result.py
