[project]
name = "atsp-gnn"
version = "0.1.0"
description = "ATSP Heterogeneous GNN + GPT NAS"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "networkx",
    "pandas",
    "tqdm",
    "tsplib95",
    "optuna",
    "matplotlib",
    "pyyaml",
    "python-dotenv",
    "openai",
    "scikit-learn",
    "lkh",
]

# [project.optional-dependencies]
# cuda = ["torch", "dgl"]  # Install manually with CUDA wheels

# PyTorch CUDA and DGL need to be installed separately:
# uv pip install torch==2.3.0+cu121 --extra-index-url https://download.pytorch.org/whl/cu121
# uv pip install dgl==2.5.0+cu121 -f https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html
